# ChangeLog for dev-python/Babel
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/Babel/ChangeLog,v 1.44 2012/09/26 01:14:51 hasufell Exp $

  26 Sep 2012; Julian Ospald <hasufell@gentoo.org> Babel-0.9.6.ebuild,
  +files/Babel-0.9.6-setuptools.patch:
  remove distutils fallback which is broken, thus enforcing usage of setuptools wrt #431278

  09 May 2012; Alexis Ballier <aballier@gentoo.org> Babel-0.9.6.ebuild:
  keyword ~amd64-fbsd

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> -Babel-0.9.5.ebuild:
  Remove old ebuilds. Requested by Arfrever

  29 May 2011; Raúl Porcel <armin76@gentoo.org> Babel-0.9.6.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #364705

  24 May 2011; Brent Baude <ranger@gentoo.org> Babel-0.9.6.ebuild:
  Marking Babel-0.9.6 ppc for bug 364705

  22 May 2011; Thomas Kahle <tomka@gentoo.org> Babel-0.9.6.ebuild:
  x86 stable per bug 364705

  18 May 2011; Jeroen Roovers <jer@gentoo.org> Babel-0.9.6.ebuild:
  Stable for HPPA (bug #364705).

  15 May 2011; Markus Meier <maekke@gentoo.org> Babel-0.9.6.ebuild:
  arm stable, bug #364705

  01 May 2011; Markos Chandras <hwoarang@gentoo.org> Babel-0.9.6.ebuild:
  Stable on amd64 wrt bug #364705

  29 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> Babel-0.9.6.ebuild:
  ppc64 stable wrt #364705

*Babel-0.9.6 (25 Mar 2011)

  25 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +Babel-0.9.6.ebuild:
  Version bump.

  08 Oct 2010; Mart Raudsepp <leio@gentoo.org> Babel-0.9.5.ebuild:
  Add ~mips keyword.

  13 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -Babel-0.9.3.ebuild, -Babel-0.9.4.ebuild:
  Delete.

  29 Aug 2010; Raúl Porcel <armin76@gentoo.org> Babel-0.9.5.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #328881

  14 Aug 2010; Markus Meier <maekke@gentoo.org> Babel-0.9.5.ebuild:
  arm stable, bug #328881

  29 Jul 2010; Markos Chandras <hwoarang@gentoo.org> Babel-0.9.5.ebuild: