@@ -3,17 +3,16 @@ Hash: SHA256
 
 AUX Babel-0.9.6-setuptools.patch 558 SHA256 9b6d2f600253aab873d9f123e0911c24a8988b9fa6e30cff8fec7b8b1c6b866a SHA512 4dd31cfecfb28bad53e1dbfde3c39f382ea1cc6f3011ae87a8e13fd7df07ee53988a090364b149b2f89963ce132e399bcdae6fe68064945a6547fb3d347abbc8 WHIRLPOOL e06cbe858e2d48b7166b569270926685af0966ab7630eedb484cc33d7b46b4d66ba105bc6a32649bd04f5b9d4975bda0740870a44d976ad998a82baec76dc521
 DIST Babel-0.9.6.tar.gz 1820835 SHA256 4a3a085ecf1fcd2736573538ffa114f1f4331b3bbbdd69381e6e172c49c9750f SHA512 65a93a405f8734dba5e36bac62e574633214660667ba5b2a8c1120924a93fed84a2a5087127d20bd33e98fbd8400bb7634f56b27d5f6db574c81ee5fe10ee537 WHIRLPOOL 47c75b88cabd4ed08cd8be4c5e23d6c267e7681a279de8a9bee21c0e0fc8b4379ca519b797cb5245df774b0b816d680c0609cbd67d6e882e7dcb1f4149873c86
+EBUILD Babel-0.9.6-r1.ebuild 1281 SHA256 9262f64d7497d671e033021e4e162b052b81cdb143c3b5d1c21352463d86ca6e SHA512 0b4fb48908eca5bd55817478cbfd047ed62f1b0e8ab7f1a543ec48f7aa7727a5db8b0b2d1bcb1ac3cf68d8393485f727650426c7bcb34da0a014e9d1f28eb98c WHIRLPOOL 4eeab243a26ff8ccce856d3d2dd6eb7cc7eed5482d96ac1303746a431e356403d36f8c8b24380d7e4aeaa6f0e119558a16c558955d10d3f3697ed0d1fec58048
 EBUILD Babel-0.9.6.ebuild 1018 SHA256 ec531b455da3a4752de0ff2f7817895204ed451d7e0ad168d3470e41b42ff97d SHA512 b83dc041d26c2aa77f164e1b5432d40559f37980224b8f7a4820d0351add0fd72d7c7adbfc2e0d7fe24a3789b99e15bf257aee7e9ee1c86ec6e660ba2b35ad54 WHIRLPOOL 9d19a2b35c0248b4795e49a502b17355b902a89030205dc638fa319cc80845585b0d3562562ec13b12a02247d868db6f289f11e3a848857c80c6b53a59c1c6b6
-MISC ChangeLog 4703 SHA256 4d8ef3931df8ff6aca38865006635afc8bae97f9325b034a6317b4d50bc4b260 SHA512 4bbb4b00ae9258b31633a0f1478240d76966555dadb2c70777b1272bdc82044fdea617eafc67b780dd77bd66c20e2aa806eed5c3dd4ddb446de2e7e716c93f58 WHIRLPOOL f1b07144896096eff3e48c6972ffe373dfbf3f98d0912a223269458b288bb34a5ecb95b837e9fbac113056e629eee497600621f7963694214281d3b08f471c40
+MISC ChangeLog 4874 SHA256 4e5632cbf7900bfe7147352cb5ca3e6c0f8f606eb559107265203fb6f4ea845a SHA512 963ed483e88f682d9170c74bf84ab18f09750c83cfde3ff3926aed6ca2725e0c28e4d48ed2635052f3ced1754a2f93bf7f2c11c6e771d1410d09f85b1519cd46 WHIRLPOOL 003f406ad4fa2845fff5aabf4336d7d38d348a719f4b1089b3b4a3ea6a5fdb441565cb560e4513ddcbf939cf272ac22ca783ad060af5e5e7deff14a048f00ac6
 MISC metadata.xml 635 SHA256 74564524186a708df911c28d24775ecd5c49ec24f1fc1f6d4342b877b2819e10 SHA512 fff53cff52c4360d0866b30092c396d06d49e570bf25fd2205705a729bb9c69d63269c9053ef695ec3980ebbae3e353ec91e09f98f071678bda96b454fa3684a WHIRLPOOL afb9416e548b6ff5e36e6d171ceeb7cb64036731cf6ac262ca28dcab22cadf59e91e00d74918a8f16d9fa0ba786d46afe2fb2a20110986ef9e3b425018199533
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQYlcPAAoJEFpvPKfnPDWzClUH/jG5bYoHd6M98Yvv8vXLulVV
-EyXB1a4tcGH/GjaQKL0ExIrs1oXxoNoc4ISbJvhXbVvhbYXOG+x3BZHxi5LYvWXk
-MYR+IsjbpX2PuhDUDPzs6oSxCsCtHkTLyj3PmUKmi0V9hOy1nDytEQKjn4rWc56D
-22dbxMteb42yzXZJyCo/gnBjudrrfxCEAbPx0NqnBlnkshVlqUdHysegrBRspD05
-aTcPL9+nny6g7UQ0G8F2oXke5fMYqF+JCKXGTUk7NOFMe8TtlorU7mpvlipzxx5b
-jnJY7qBUdqkCWWoI7HEiqNIdirCEoAO0WrxCFpSBUdc+ZWdtd38HPa7EVz3pQKU=
-=UMwn
+iJwEAQEIAAYFAlDSF5YACgkQfXuS5UK5QB1pnwP+MIMOt//qcFibAwgZhkHeIDPO
+L4mXzv3dL6tyfMta1kl5OnmMSJbH9Gmbqfu1hb/fl98Hh7hYYJdgE9tDjPMNKisv
+I8jSyxXtve0AnN+VKIJ099xhLv42paBQSFew4Fhx87SME2Sqcnp2O6zsE/pFOrPW
+YrO5+WM3IIU9flTgIyY=
+=69GQ
 -----END PGP SIGNATURE-----
