@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/Babel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/Babel/ChangeLog,v 1.44 2012/09/26 01:14:51 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/Babel/ChangeLog,v 1.45 2012/12/19 19:37:53 mgorny Exp $
+
+*Babel-0.9.6-r1 (19 Dec 2012)
+
+  19 Dec 2012; Michał Górny <mgorny@gentoo.org> +Babel-0.9.6-r1.ebuild:
+  Migrate to distutils-r1. Remove the patch, USE-deps supersede it.
 
   26 Sep 2012; Julian Ospald <hasufell@gentoo.org> Babel-0.9.6.ebuild,
   +files/Babel-0.9.6-setuptools.patch:
@@ -142,4 +147,3 @@
   16 Jul 2008; Cédric Krier <cedk@gentoo.org> +metadata.xml,
   +Babel-0.9.2.ebuild:
   New ebuild for bug #198804 thanks to Sandro Bonazzola, Rion
-
